basic logic done

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
             </ul>
             <p id="values">[255 , 0 , 255]
             </p>
+            <div id="answer"></div>
         </div>
         <div id="colors">
-            <button class="btn" id="color1" onclick="guess()"></button>
-            <button class="btn" id="color2" onclick="guess()"></button>
-            <button class="btn" id="color3" onclick="guess()"></button>
+            <button class="btn" id="1" onclick="guess()"></button>
+            <button class="btn" id="2" onclick="guess()"></button>
+            <button class="btn" id="3" onclick="guess()"></button>
         </div>
         <h2>Select the COLOR you Guessed</h2>
+
         <button id="replay" onclick="replay()">Replay</button>
     </section>
 
