--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
     <section class="main">
         <h1> GUESS RGB VALUE OF COLOR </h1>
+        <select name="" id="difficulty">
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
+        </select>
         <div id="question">
             <ul class="info">
                 [
